# pretty-map

./: .gitignore  LICENSE-CCBY-NC-SA4.0.txt  README.md  config.py  coordinate_calculator.ods  final_resolution_calc.ods  osm.py  projection.py  render.py  renderer.py  svg.py  svg_display.py  tags_in_london.txt  todo.md
blogpost/: Untitled.ipynb  amp.py
blogpost/.cache/joblib/__main__--home-olaf-develop-pretty-map-blogpost-amp/collect_relations/: func_code.py
blogpost/.cache/joblib/__main__--home-olaf-develop-pretty-map-blogpost-amp/collect_relations/3dab9091cfc3fdce369856ccea55dcbe/: metadata.json
config/: london_center.json  london_full.json  test_small.json
rust_rewrite/: .gitignore  Cargo.toml  tile_combiner.py  todo.org
rust_rewrite/src/: data.rs  errors.rs  etl.rs  etl_engine.rs  main.rs  study.rs
rust_rewrite/src/data/: osm.rs  semantic.rs
rust_rewrite/src/etl/: draw_map.rs  parse_osm.rs  semantic_map.rs
