[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
rkyv = "=0.7.44"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
xz = "0.1.0"
