[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", features = ["kv"] }
quick-xml = "0.31.0"
rkyv = "=0.7.44"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structured-logger = "1.0.3"
xz = "0.1.0"
