[package]
name = "rust_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.13.1"
log = { version = "0.4.21", features = ["kv"] }
pathfinder_geometry = { version = "0.5" }
png = "0.17.13"
quick-xml = "0.31.0"
raqote = { path = "../../raqote" }
regex = "1.10.5"
rkyv = "=0.7.44"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structured-logger = "1.0.3"
sw-composite = "0.7.16"
tqdm = "0.7.0"
xz = "0.1.0"
